--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
